=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.026 - Under Development

=over

=item *

Deployed version is now displayed in the template edit UI.
[Michael Peters]

=item *

Fixed a bug in L<Krang::Schedule> - scheduling specific versions of a
story or media object for publish now works again.  [Peter]

=item *

Additional documentation!  The long-awaited 
HREF[Creating an Element Library in Krang|building_element_library.html]! [Peter]


=item *

New documentation added -
HREF[Running Krang on the Desktop|krang_on_desktop.html]:
A guide on how to install and run Krang on your local machine.
[Peter]

=item *

Solaris support added!  Tested against Solaris 9, this should also
work against previous versions as well.  Thanks to Joseph Sacco
(jsacco@earthlink.net). [Peter]

=item *

Support for Mac OSX has been added!  Currently tested against 10.3.5,
let us know if it works on other versions!  Thanks to Matthew Wood
(matt@nomorefluffybunny.com).  [Peter]

=item *

C<bin/krang_info> now gives story/media stats for each
instance. [Peter]

=item *

Fixed a bug in L<Krang::ElementClass::StoryLink> where elements that
were never linked to stories no longer throw an error, but return
cleanly.  [Michael Peters]

=item *

Mandrake support has been added!  [Matt]

=item *

Fixed browser detection to deal with 1.0 prerelease of Firefox, which
gives a version number of 0.10.  [Aaron Ross]

=back

=head2 v1.025 - October 1, 2004

=over

=item *

Cleaned up error handling in L<Krang::Publisher> and the
C<bin/krang_publish> script - errors are now trapped properly and
reported in a cleaner fashion.  [Peter]

=item *

Fixed a bug in the upgrade process of 1.024.  Users who upgraded to
1.024 should immediately upgrade to 1.025.  [Peter]

=item *

C<bin/krang_publish> and C<bin/krang_delete> now properly interact
with hidden stories. [Peter]

=back


=head2 v1.024 - September 24, 2004

=over

=item *
